Fixed alignment of boxes on scheduling page

--- a/public/styles/schedule.less
+++ b/public/styles/schedule.less
@@ -44,7 +44,7 @@
 #schedule-summary{
 	color:#333;
 	min-height:35px;
-	padding:5px 0 7px 10px;
+	padding:5px 0 7px;
 	font-size:17px;
 	#name{
 		overflow: hidden;
@@ -57,7 +57,7 @@
 
 #add-course-content{
 	background:transparent;
-	padding:5px 5px 10px 5px;
+	padding:5px 0px 10px;
 	border-bottom: 2px solid @lightGrey;
 	#header{
 		color:#0051C0;
